mis ejercicios de Spring Boot

--- a/demoSpring/pom.xml
+++ b/demoSpring/pom.xml
@@ -57,7 +57,7 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <!-- JWT -->
+        <!-- JSON WEB TOKEN -->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
