--- a/demoSpring/src/main/resources/application.properties
+++ b/demoSpring/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # Puerto de la aplicación
 #server.port=9000
 # URL jdbc de conexión a la base de datos
+#spring.datasource.url=jdbc:h2:./adrian
 #spring.datasource.url=jdbc:h2:file:./adrian;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.url=jdbc:h2:mem:adriandb;DB_CLOSE_ON_EXIT=FALSE;
 #AUTO_SERVER=TRUE;
